# AmpliconSuiteAggregator

./: .env  .gitignore  DEPLOY.md  Dockerfile  INPUT_FILES.md  LICENSE  README.md  build.xml  manifest  paramgroups.json  prerelease.version  pyproject.toml  release.version  requirements.txt
docs/v1/: index.md
gpunit/: AmpliconSuiteAggregator_basic_diff_test.yml
gpunit/inputs/: filelist.txt  input_list.txt
src/: ASA_POST.py  AmpliconSuiteAggregator.py  AmpliconSuiteAggregatorFunctions.py  asa_aggregator.py  asa_stages.py  dep_AmpliconSuiteAggregator.py  dep_AmpliconSuiteAggregatorFunctions.py  filelist.txt  setup.sh
