[project]
name = "AmpliconSuiteAggregator"
version = "6.0.0"
authors = [
  { name="Thorin Tabor", email="tmtabor@cloud.ucsd.edu" },
  { name = "Jens Luebeck", email="jluebeck@ucsd.edu" },
]
description = "Aggregator tool for multiple Amplicon Architect outputs"
readme = "README.md"
requires-python = ">3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
license = {file = "LICENSE"}

[project.urls]
Homepage = "https://github.com/AmpliconSuite/AmpliconSuiteAggregator"
Issues = "https://github.com/AmpliconSuite/AmpliconSuiteAggregator/issues"
